# Dear-my-X

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/server/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial.py
apps/server/app/: __init__.py  main.py
apps/server/app/ai/: __init__.py
apps/server/app/ai/chunkers/: __init__.py  conversation_chunker.py
apps/server/app/ai/clients/: __init__.py  claude_client.py  embedding_client.py
apps/server/app/ai/masking/: __init__.py  pii_masker.py
apps/server/app/ai/parsers/: __init__.py  (+2 more)
apps/server/app/api/: __init__.py  deps.py
apps/server/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
apps/server/app/db/: __init__.py  base.py  pgvector.py  session.py
apps/server/app/integrations/: __init__.py
apps/server/app/models/: __init__.py  chat_room.py  conversation_upload.py  memory_chunk.py  message.py  persona.py  user.py
apps/server/app/repositories/: __init__.py  base.py  chat_repo.py  memory_repo.py  persona_repo.py  upload_repo.py  user_repo.py
apps/server/app/schemas/: __init__.py  chat.py  common.py  persona.py  upload.py  user.py
apps/server/app/services/: __init__.py  auth_service.py  chat_service.py  persona_service.py  upload_service.py
apps/server/app/utils/: __init__.py
apps/server/app/workers/: __init__.py
apps/server/tests/: test_health.py
(+56 files in other folders)
